@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnome-system-monitor, 2.0.4)
+AM_INIT_AUTOMAKE(gnome-system-monitor, 2.0.5)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_INTLTOOL
