@@ -1,3 +1,9 @@
+2003-06-06  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/load-graph.c, src/proctable.c: Merge a couple
+	of fixes from HEAD for a new release. Fixes 
+	bug #70101 among other things.
+	
 2003-05-06  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* configure.in: Added "hi" in ALL_LINGUAS.
